// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches disabled snapshot 1`] = `
<label
  className="radio-label radio-label--disabled"
>
  <input
    className="radio-input radio-input--disabled"
    disabled={true}
    style={
      Object {
        "--radio-checked-opacity": "0",
        "--radio-opacity": "0.4",
      }
    }
    type="radio"
  />
  Disabled
</label>
`;

exports[`Radio matches snapshot 1`] = `
<label
  className="radio-label"
>
  <input
    className="radio-input"
    style={
      Object {
        "--radio-checked-opacity": "1",
        "--radio-opacity": "1",
      }
    }
    type="radio"
  />
  Click Me
</label>
`;
